--- a/scss/_health.scss
+++ b/scss/_health.scss
@@ -17,7 +17,7 @@
       box-shadow: 0px 5px 10px 3px $colorText;
       font-size: 15px;
       font-weight: bold;
-      padding: 10px;
+      padding: 10px 20px 10px 20px;
       position: relative;
       z-index: 3;
       &:hover{
