--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -14,12 +14,15 @@ header {
   .hamburger{
     line-height: 50px;
     position: relative;
-    z-index: 3;
+    z-index: 6;
     text-align: center;
     background: rgba(255,255,255, 0.5);
     cursor: pointer;
     @include desktop{
       display: none;
+    }
+    .fa{
+      position: fixed;
     }
   }
   nav {
