--- a/scss/_perfume.scss
+++ b/scss/_perfume.scss
@@ -1,11 +1,13 @@
 #perfume {
   text-align: center;
   .row {
-    padding-top: 50px;
+    padding-top: 10vh;
     @include desktop {
       padding-top: 30vh;
+    }
       div {
         padding-right: 5%;
+        margin-bottom: 30vh;
         a {
           color: $colorText;
           -webkit-box-shadow: 0px 5px 10px 3px $colorText;
@@ -15,7 +17,7 @@
           background-color: lighten($mainColor, 8%);
           font-size: 15px;
           font-weight: bold;
-          padding: 10px;
+          padding: 20px;
           position: relative;
           z-index: 3;
           &:hover {
@@ -27,24 +29,28 @@
           }
         }
       }
+    div:nth-of-type(2){
+      margin-bottom: 5vh;
     }
     h2 {
       font-family: $fontItalics;
       color: darkred;
       text-shadow: 1px -2px 5px black;
-      font-size: 30px;
-      padding-bottom: 10%;
+      font-size: 40px;
+      padding-bottom: 5%;
       @include desktop {
         font-size: 45px;
         font-weight: bold;
+        padding-bottom: 10%;
       }
     }
     h3 {
-      font-size: 20px;
+      font-size: 30px;
       font-weight: bold;
-      padding-bottom: 15%;
+      padding-bottom: 10%;
       @include desktop {
         font-size: 25px;
+        padding-bottom: 15%;
       }
     }
   }
