--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -1,5 +1,8 @@
 #health, #products, #perfume{
-  min-height: 600px;
+  min-height: 400px;
+  @include desktop{
+    height: 600px;
+  }
 }
 
 #slider{
