--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,8 @@ html {
 }
 
 #slider .row {
-  padding-top: 100px;
+  margin-bottom: 75%;
+  padding-top: 25%;
 }
 
 @media (min-width: 640px) {
@@ -141,6 +142,7 @@ html {
   position: absolute;
   top: 15px;
   left: 25%;
+  font-size: 30px;
   font-weight: bold;
   color: black;
   text-shadow: 1px -2px 5px black;
@@ -720,7 +722,7 @@ input[type=button] {
 #health,
 #products,
 #perfume {
-  min-height: 400px;
+  min-height: 60vh;
 }
 
 @media (min-width: 640px) {
@@ -732,7 +734,7 @@ input[type=button] {
 }
 
 #slider {
-  height: 200px;
+  min-height: 50vh;
 }
 
 @media (min-width: 640px) {
@@ -860,7 +862,7 @@ div.slide:nth-of-type(5) {
 }
 
 #products .row {
-  padding-top: 300px;
+  margin-top: 20vh;
 }
 
 @media (min-width: 640px) {
@@ -875,11 +877,10 @@ div.slide:nth-of-type(5) {
 
 #products div div:nth-of-type(2) ul {
   list-style: square;
-  text-align: left;
 }
 
 #products div div:nth-of-type(2) ul li {
-  font-size: 20px;
+  font-size: 25px;
   padding-bottom: 5%;
 }
 
@@ -917,8 +918,14 @@ div.slide:nth-of-type(5) {
 }
 
 #perfume .row div {
-  padding-right: 5%;
-  margin-bottom: 30vh;
+  margin-bottom: 10vh;
+}
+
+@media (min-width: 640px) {
+  #perfume .row div {
+    padding-right: 5%;
+    margin-bottom: 30vh;
+  }
 }
 
 #perfume .row div a {
@@ -946,8 +953,12 @@ div.slide:nth-of-type(5) {
   }
 }
 
-#perfume .row div:nth-of-type(2) {
-  margin-bottom: 5vh;
+@media (max-width: 640px) {
+  #perfume .row div:nth-of-type(2) {
+    margin: 0 15vw 5vh 15vw;
+    width: 70vw;
+    height: 40vh;
+  }
 }
 
 #perfume .row h2 {
@@ -1005,26 +1016,22 @@ div.slide:nth-of-type(5) {
   }
 }
 
-#contact .row h3 {
-  color: darkred;
-  text-align: center;
-  line-height: 400%;
-  font-size: 25px;
-  font-weight: bold;
-}
-
-@media (min-width: 640px) {
-  #contact .row h3 {
-    font-size: 40px;
-  }
-}
-
 #contact .row form {
   font-size: 25px;
   line-height: 150%;
   width: 100%;
   height: 100%;
   text-align: center;
+}
+
+#contact .row form .error {
+  color: red;
+  font-size: 15px;
+}
+
+#contact .row form .right {
+  color: green;
+  font-size: 15px;
 }
 
 #contact .row form label {
@@ -1040,7 +1047,6 @@ div.slide:nth-of-type(5) {
 #contact .row form input:last-of-type {
   width: 50%;
   font-family: "Open Sans", sans-serif;
-  margin-top: 20px;
   color: white;
   background-color: #0f2e24;
   font-size: 18px;
@@ -1066,46 +1072,77 @@ div.slide:nth-of-type(5) {
   height: 30vh;
 }
 
+#contact .row form input.invalid,
+#contact .row form textarea.invalid {
+  border: 3px solid red;
+}
+
+#contact .row form input.valid,
+#contact .row form textarea.valid {
+  border: 3px solid green;
+}
+
 #contact .row #social {
-  width: 80vw;
-  height: 60vh;
-  margin: 10vh 10vw;
+  width: 90vw;
+  height: 20vh;
+  text-align: center;
+  margin: 10% 0;
   color: white;
-  border-radius: 100px 100px 100px 100px;
-  -moz-border-radius: 100px 100px 100px 100px;
-  -webkit-border-radius: 100px 100px 100px 100px;
-  border: 5px solid white;
 }
 
 @media (min-width: 640px) {
   #contact .row #social {
     width: 45%;
     height: 400px;
-    margin: 5% 0 0 5%;
+    margin: 5% 0 5% 5%;
   }
-}
-
-#contact .row .fa {
-  font-size: 20vh;
-  padding: 5%;
 }
 
 @media (min-width: 640px) {
-  #contact .row .fa {
-    padding: 35px;
-    font-size: 12vh;
+  #contact .row #social {
+    border: 5px solid white;
+    border-radius: 100px 100px 100px 100px;
+    -moz-border-radius: 100px 100px 100px 100px;
+    -webkit-border-radius: 100px 100px 100px 100px;
   }
 }
 
-#contact .row .fa:first-of-type {
+#contact .row #social h3 {
+  color: darkred;
+  text-align: center;
+  line-height: 200%;
+  font-size: 25px;
+  font-weight: bold;
+}
+
+@media (min-width: 640px) {
+  #contact .row #social h3 {
+    font-size: 40px;
+    line-height: 400%;
+  }
+}
+
+#contact .row #social .fa {
+  font-size: 10vh;
+  padding: 0 4%;
+}
+
+@media (min-width: 640px) {
+  #contact .row #social .fa {
+    padding: 5% 8% 5% 8%;
+    font-size: 10vh;
+  }
+}
+
+#contact .row #social .fa:first-of-type {
   color: #3b5998;
 }
 
-#contact .row .fa:nth-of-type(2) {
+#contact .row #social .fa:nth-of-type(2) {
   color: #00aced;
 }
 
-#contact .row .fa:last-of-type {
+#contact .row #social .fa:last-of-type {
   color: #cc181e;
 }
 
@@ -1139,7 +1176,7 @@ div.slide:nth-of-type(5) {
   font-family: "Dancing Script", cursive;
   color: darkred;
   text-shadow: 1px -2px 5px black;
-  font-size: 30px;
+  font-size: 40px;
   padding-bottom: 5%;
 }
 
@@ -1158,25 +1195,13 @@ div.slide:nth-of-type(5) {
 
 #local .row h3 {
   font-family: "Dancing Script", cursive;
-  font-size: 30px;
+  font-size: 35px;
   line-height: 250%;
   font-weight: bold;
 }
 
-@media (min-width: 640px) {
-  #local .row h3 {
-    font-size: 35px;
-  }
-}
-
 #local .row h4 {
-  font-size: 18px;
-}
-
-@media (min-width: 640px) {
-  #local .row h4 {
-    font-size: 20px;
-  }
+  font-size: 20px;
 }
 
 #local .row h4:nth-of-type(3) {
