--- a/scss/_perfume.scss
+++ b/scss/_perfume.scss
@@ -6,8 +6,11 @@
       padding-top: 30vh;
     }
       div {
-        padding-right: 5%;
-        margin-bottom: 30vh;
+        margin-bottom: 10vh;
+        @include desktop{
+          padding-right: 5%;
+          margin-bottom: 30vh;
+        }
         a {
           color: $colorText;
           -webkit-box-shadow: 0px 5px 10px 3px $colorText;
@@ -30,7 +33,12 @@
         }
       }
     div:nth-of-type(2){
-      margin-bottom: 5vh;
+
+      @include mobile{
+        margin: 0 15vw 5vh 15vw;
+        width: 70vw;
+        height: 40vh;
+      }
     }
     h2 {
       font-family: $fontItalics;
