--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -1,12 +1,12 @@
 #health, #products, #perfume{
-  min-height: 400px;
+  min-height: 60vh;
   @include desktop{
     height: 600px;
   }
 }
 
 #slider{
-  height: 200px;
+  min-height: 50vh;
   @include desktop{
     height: 550px;
   }
