--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ footer .row.col-d-6.col-m-6 .fa {
 header {
   height: 100vh;
   width: 100%;
-  background-image: url(/assets/tlo.jpg);
+  background-image: url(/FinalProject/assets/tlo.jpg);
   background-color: #050f0c;
   background-position: top center;
   background-size: cover;
@@ -1230,7 +1230,7 @@ div.slide:nth-of-type(5) {
 }
 
 #opening #flower {
-  background-image: url(/assets/transparent.png);
+  background-image: url(/FinalProject/assets/transparent.png);
   height: 400px;
   width: 400px;
   position: relative;
